--- a/app.json
+++ b/app.json
@@ -2,10 +2,20 @@
   "pages":[
     "page/index/index",
     "page/login/login",
-    "page/grant/grant",
-    "page/catalog/catalog"
+    "page/grant/grant"
   ],
   "subPackages": [
+    {
+      "root": "page/catalog/",
+      "name": "catalog",
+      "pages": [
+        "pages/catalog/catalog",
+        "pages/factory/factory",
+        "pages/mulu/mulu",
+        "pages/equipment/equipment"
+      ],
+      "independent": false
+    },
     {
       "root": "page/attribute/",
       "name": "attribute",
@@ -14,7 +24,7 @@
         "pages/attributeList/attributeList"
       ],
       "independent": false
-    }, 
+    },
     {
       "root": "page/check/",
       "name": "check",
@@ -23,7 +33,8 @@
         "pages/checkList/checkList"
       ],
       "independent": false
-    }, {
+    },
+    {
       "root": "page/repair/",
       "name": "repair",
       "pages": [
@@ -31,12 +42,44 @@
         "pages/repairList/repairList"
       ],
       "independent": false
+    },
+    {
+      "root": "page/report/",
+      "name": "report",
+      "pages": [
+        "pages/analyCheck/analyCheck",
+        "pages/analyRepair/analyRepair"
+      ],
+      "independent": false
+    },
+    {
+      "root": "page/inspection/",
+      "name": "inspection",
+      "pages": [
+        "pages/inspectionList/inspectionList",
+        "pages/inspection/inspection",
+        "pages/customer/customer",
+        "pages/order/order"
+      ],
+      "independent": false
+    },
+    {
+      "root": "page/container/",
+      "name": "container",
+      "pages": [
+        "pages/loading/loading",
+        "pages/delivery/delivery",
+        "pages/container/container",
+        "pages/loadingList/loadingList"
+      ],
+      "independent": false
     }
   ],
   "preloadRule":{
-    "page/catalog/catalog": {
+    "page/login/login": {
       "network": "all",
       "packages": [
+        "catalog",
         "attribute",
         "check",
         "repair"
@@ -64,7 +107,7 @@
       },
       {
         "pagePath": "page/login/login",
-        "text": "我的",
+        "text": "登录",
         "iconPath": "img/mine.png",
         "selectedIconPath": "img/user-slt.png"
       }
