修改角色权限
添加权限集成

--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
         "pages/catalog/catalog",
         "pages/factory/factory",
         "pages/mulu/mulu",
-        "pages/equipment/equipment"
+        "pages/equipment/equipment",
+        "pages/tainerindex/tainerindex",
+        "pages/inspecindex/inspecindex"
       ],
       "independent": false
     },
