质量资料上传
玫德雅昌添加质量资料上传功能

--- a/app.json
+++ b/app.json
@@ -75,6 +75,15 @@
         "pages/loadingList/loadingList"
       ],
       "independent": false
+    },
+    {
+      "root": "page/quality/",
+      "name": "quality",
+      "pages": [
+        "pages/qualityList/qualityList",
+        "pages/qualityInfo/qualityInfo"
+      ],
+      "independent": false
     }
   ],
   "preloadRule":{
